# AGA_Automation_cpp

./: CMakeLists.txt
source/: Screenshot.cpp  Screenshot.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  gen_def.h  includes.h  init.cpp  init.h  key_input.cpp  key_input.h  main.cpp
